# childrens-speech-recognition-runtime

./: .env.example  .gitignore  CHANGELOG.md  README.md  justfile
.github/workflows/: ci.yml
examples/phonetic/minimal/: main.py
examples/phonetic/minimal/lib/: __init__.py
examples/phonetic/minimal/model/: phon_model.txt
examples/phonetic/parakeet-cmudict/: .gitignore  README.md  download.sh  main.py
examples/phonetic/parakeet-cmudict/lib/: ipa.py
examples/word/minimal/: main.py  pack_submission.sh
examples/word/minimal/lib/: __init__.py
examples/word/minimal/model/: word_model.txt
examples/word/parakeet/: README.md  main.py  pack_submission.sh
examples/word/parakeet/lib/: parakeet.py
metric/: score.py
runtime/: .dockerignore  Dockerfile  apt.txt  entrypoint.sh  pyproject.toml
runtime/tests/: test_imports.py
